kubernetes/apps/app-cluster/gaming/minecraft-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server
  namespace: gaming
  labels:
    app: minecraft-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft-server
  template:
    metadata:
      labels:
        app: minecraft-server
    spec:
      containers:
        - name: minecraft
          image: itzg/minecraft-server:latest
          ports:
            - containerPort: 25565
              name: minecraft
          resources:
            requests:
              memory: "6Gi"
              cpu: "2"
            limits:
              memory: "6Gi"
              cpu: "4"
          volumeMounts:
            - name: minecraft-storage
              mountPath: /data
      volumes:
        - name: minecraft-storage
          persistentVolumeClaim:
            claimName: minecraft-server-pvc
