kubernetes/apps/app-cluster/gaming/minecraft-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server-service
  namespace: gaming
spec:
  selector:
    app: minecraft-server
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
  type: ClusterIP
