kubernetes/apps/app-cluster/gaming/minecraft-server/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minecraft-server-route
  namespace: gaming
  annotations:
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
    - name: envoy-external
      namespace: network
  hostnames:
    - "minecraft.krapulax.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minecraft-server-service
          port: 25565
